--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,2 @@
-<div class="fixed-top">
-    <div class="collapse" id="navbarToggleExternalContent">
-        <div class="bg-dark p-4">
-            <h5 class="text-white h4">Collapsed content</h5>
-            <span class="text-muted">Toggleable via the navbar brand.</span>
-        </div>
-    </div>
-    <nav class="navbar navbar-dark menu-cor">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        </button>
-        <button class="btn my-2 my-sm-0 entrar" type="submit">Entrar</button>
-    </nav>
-</div>
+<app-menu></app-menu>
+<app-rodape></app-rodape>
