--- a/src/app/rodape/rodape.component.css
+++ b/src/app/rodape/rodape.component.css
@@ -13,7 +13,7 @@
     }
 
     .botao-color:hover{
-        background-color:#000;
+        background-color:rgb(50, 53, 226);
         color: #fff
     }
 
