--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,4 +1,4 @@
-<div class="fixed-top">
+<div class="sticky-top">
     <div class="collapse" id="navbarToggleExternalContent">
         <div class="bg-dark p-4">
             <h5 class="text-white h4">Collapsed content</h5>
@@ -9,7 +9,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
-        
+        <img src="https://i.imgur.com/2g6ttf5.png" width="100px" alt="">
         <button class="btn my-2 my-sm-0 entrar" type="submit">Entrar</button>
     </nav>
 </div>
