--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -42,107 +42,74 @@
     
     </main>
 
-    <div class="flex-container apresentacao">
-        <div class="texto-apresentacao">
-            <h1>Flex <br>Turismos</h1>
-            <p>O melhor serviço para você!</p>
-            <a href="" class="btn">Saiba Mais!</a>
-        </div>
 
+    <div class="flex-container quem-somos" >
         <div>
-            <div><img src="./images/0-main.png" alt="banner de apresentação"></div>
-        </div>
-    </div>
-
-    <div class="flex-container" id="quem-somos">
-        <div>
-            <h2>Quem somos</h2>
-            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </p>
-            <p>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
+            <h2>Jornada acolhedora</h2>
+            <p>  Ninguém merece sofrer por querer ser quem quiser ser. Aqui na u.tra contamos com profissionais a preços acessíveis para te amparar desde o começo da sua jornada..</p>
         </div>
 
         <div>
             <div>
-                <div><img src="./images/1-quem-somos.png" alt="balcão de atendimento"></div>
+                <div><img src="https://i.imgur.com/TeF2UDh.png" alt="abraço e acolhimento"></div>
+            </div>
+        </div>
+    </div>
+
+    <div class="flex-container quem-somos2 mt-5" >
+        <div>
+            <h2>Respostas e certezas</h2>
+            <p> Nossas fontes de informações são fornecidas por profissionais qualificados das áreas de saúde e jurídica que estão dispostos a te atender da melhor maneira.</p>
+        </div>
+
+        <div>
+            <div>
+                <div><img src="https://i.imgur.com/cC2lvTb.png" alt="dúvidas "></div>
+            </div>
+        </div>
+    </div>
+
+    <div class="flex-container quem-somos" >
+        <div>
+            <h2>Serviços médicos</h2>
+            <p> A u.tra te dá acesso a todos os serviços clínicos necessários em seu processo de transição. <p>
+        </div>
+
+        <div>
+            <div>
+                <div><img src="https://i.imgur.com/o0a3Pwg.png" alt="abraço e acolhimento"></div>
             </div>
         </div>
     </div>
 
     <div class="container-externo">
         <div class="flex-container" id="servicos">
-            <div>
-                <h2>Serviços</h2>
-            </div>
 
-            <div class="list-servicos">
+            <div class="lista-servicos">
                 <div class="item-servicos">
-                    <div><img src="./images/icon-2.png" alt="hospedagens"></div>
-                    <p>Hospedagens</p>
-                    <a href="#">Comprar Agora</a>
+                    <div><img src="https://i.imgur.com/KEXTjwN.png" alt="Encontre as melhores informações"></div>
+                    <p>Encontre as melhores informações</p>
                 </div>
 
                 <div class="item-servicos">
-                    <div><img src="./images/icon-1.png" alt="pacote de viagens"></div>
-                    <p>Pacotes de viagens</p>
-                    <a href="#">Comprar Agora</a>
+                    <div><img src="https://i.imgur.com/traMjzv.png" alt="Fale com especialistas"></div>
+                    <p>Fale com especialistas</p>
+
                 </div>
 
                 <div class="item-servicos">
-                    <div><img src="./images/icon-3.png" alt="roteiros personalizados"></div>
-                    <p>Roteiros personalizados</p>
-                    <a href="#">Comprar Agora</a>
+                    <div><img src="https://i.imgur.com/L8YQgw0.png" alt="Tire dúvidas sobre seu processo"></div>
+                    <p>Tire dúvidas sobre seu processo</p>
+                </div>
+
+                <div class="item-servicos">
+                    <div><img src="https://i.imgur.com/Bg8O9aM.png" alt="Receba o acolhimento que precisa"></div>
+                    <p>Receba o acolhimento que precisa</p>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="flex-container" id="planos">
-        <div>
-            <h2>Planos</h2>
-        </div>
-        <div class="list-planos">
-            <div class="item-plano">
-                <h3>Plano 1</h3>
-                <ul>
-                    <li>Suporte 24h</li>
-                    <li>Serviços de quarto</li>
-                    <li>Guia turístico</li>
-                </ul>
-                <a href="#" class="btn">Saiba Mais!</a>
-            </div>
 
-            <div class="item-plano">
-                <h3>Plano 2</h3>
-                <br>
-                <ul>
-                    <li>Suporte 24h</li>
-                    <li>Serviços de quarto</li>
-                    <li>Guia turístico</li>
-                    <li>Roteiro de trilhas</li>
-                </ul>
-                <a href="#" class="btn">Saiba Mais!</a>
-            </div>
-
-            <div class="item-plano">
-                <h3>Plano 3</h3>
-                <br>
-                <ul>
-                    <li>Suporte 24h</li>
-                    <li>Serviços de quarto</li>
-                    <li>Guia turístico</li>
-                    <li>Roteiro de trilhas</li>
-                    <li>Serviço personalizado</li>
-                    <li>Área Vip</li>
-                </ul>
-                <a href="#" class="btn">Saiba Mais!</a>
-            </div>
-        </div>
-    </div>
-
-    <footer>
-        <div class="flex-container footer">
-            <p>&copy; 2021 CSS Flexbox</p>
-            <p>Desenvolvido por: Raquel da Conceição Silva.</p>
-        </div>
-    </footer>
+    
 </body>
