--- a/src/app/rodape/rodape.component.css
+++ b/src/app/rodape/rodape.component.css
@@ -1,7 +1,7 @@
 .botao-color{
     margin-top: 100px;
     margin-bottom: 50px;
-    background-color: #4E51BF;
+    background-color: #2F3279;
     border-radius: 50px;
     width: 251px;
     height: 50px;
