Alinhamento e elaboração do card

--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,4 +1,4 @@
-<body>
+<body class="container-fluid p-0 m-0">
     
     <main>
 
@@ -22,19 +22,26 @@
             </div>
 
                     
-                    <div class="col-md-6">
-                        <div class="card" style="width: 18rem;">
-                            <div class="card-body">
-                              <h5 class="card-title">Card title</h5>
-                              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                              <a href="#" class="card-link">Card link</a>
-                              <a href="#" class="card-link">Another link</a>
-                              <button type="button" class="btn btn-primary btn-sm">Small button</button>
-                              <button type="button" class="btn btn-secondary btn-sm">Small button</button>
-                            </div>
-                          </div>
+            <div class="col-md-6">
+                <div class="card PD" style="width: 18rem;">
+                    <div class="card-body">
+                      <h5 class="card-title">Como podemos te ajudar?</h5>
+                      <h6 class="card-subtitle mb-2 text-muted pt-3 pb-1">Tipo de atendimentos</h6>
+                            <button type="button" class="btn btn-sm presencial pr-5">PRESENCIAL</button>
+                            <button type="button" class="btn btn-sm online">ONLINE</button>
+                            
+                                <div class="form-group pt-4">
+                                  <label for="exampleInputEmail1" class="pb-2">Especialidade</label>
+                                  <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                </div>
+                                <div class="botao1">
+                                    <button type="submit" class="btn btn-light ">BUSCAR</button>
+
+                                </div>
+                              
                     </div>
+                  </div>
+            </div>
 
                 </div>
             </div>
