--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -5,7 +5,7 @@
 
 .navbar-toggler{
     margin-left: 100px;
-    border-color: #ffe9ce;
+    border-color: transparent;
 }
 
 .entrar{
@@ -19,4 +19,255 @@
 .entrar:hover{
     background-color: aliceblue;
     color: black;
+}
+
+
+/* Menu */
+.fonte{
+	font-size: 18px;
+}
+
+@media (min-width : 994px){  
+    .buscar{
+        width:130px; 
+        font-size: 13px;
+        }
+}
+
+@media (max-width : 991px){  
+    
+    .texto{
+        border-radius: 25px;
+        border: 2px solid #ffff ;
+        text-align: center;
+        padding-top: 15px;
+        padding-bottom: 15px;
+    }  
+}
+
+.preto{
+    background-color: black;
+}
+
+.custom-toggler .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='white' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+  }
+
+.custom-toggler.navbar-toggler {
+    border-color: white;
+  } 
+
+#burger-toggle {
+    position: absolute;
+    appearance: none;
+    opacity: 0;
+}
+#burger-toggle:checked ~ .menu {
+    opacity: 1;
+    visibility: visible;
+}
+#burger-toggle:checked ~ .menu .menu-nav-link span div, #burger-toggle:checked ~ .menu img, #burger-toggle:checked ~ .menu .title p {
+    transform: translateY(0);
+    transition: 1.2s 0.1s cubic-bezier(0.35, 0, 0.07, 1);
+}
+#burger-toggle:checked ~ .burger-menu .line::after {
+    transform: translateX(0);
+}
+#burger-toggle:checked ~ .burger-menu .line:nth-child(1) {
+    transform: translateY(calc(var(--burger-menu-radius) / 5)) rotate(45deg);
+}
+#burger-toggle:checked ~ .burger-menu .line:nth-child(2) {
+    transform: scaleX(0);
+}
+#burger-toggle:checked ~ .burger-menu .line:nth-child(3) {
+    transform: translateY(calc(var(--burger-menu-radius) / -5)) rotate(-45deg);
+}
+.burger-menu {
+    --burger-menu-radius: 4em;
+    position: fixed;
+    top: 0.1vh;
+    left: 5vw;
+    z-index: 100;
+    
+    width: var(--burger-menu-radius);
+    height: var(--burger-menu-radius);
+    outline: none;
+    cursor: pointer;
+}
+.burger-menu .line {
+    position: absolute;
+    padding-top: 2px;
+    left: 25%;
+    width: 50%;
+    height: 3px;
+    background: black;
+    border-radius: 10px;
+    overflow: hidden;
+    transition: 0.5s;
+}
+.burger-menu .line:nth-child(1) {
+    top: 30%;
+}
+.burger-menu .line:nth-child(2) {
+    top: 50%;
+}
+.burger-menu .line:nth-child(3) {
+    top: 70%;
+}
+.burger-menu .line::after {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--primary-color-darker);
+    transform: translateX(-100%);
+    transition: 0.25s;
+}
+.burger-menu .line:nth-child(2)::after {
+    transition-delay: 0.1s;
+}
+.burger-menu .line:nth-child(3)::after {
+    transition-delay: 0.2s;
+}
+.burger-menu:hover .line::after {
+    transform: translateX(0);
+}
+.menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: white;
+    opacity: 0;
+    overflow-x: hidden;
+    visibility: hidden;
+    transition: 0.3s;
+}
+
+
+
+@media screen and (max-width: 860px) {
+    .menu {
+        display: block;
+   }
+}
+.menu-nav {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    list-style-type: none;
+}
+@media screen and (max-width: 860px) {
+    .menu-nav {
+        padding-top: "10px";
+        flex-direction: column;
+   }
+}
+.menu-nav-item {
+    flex: 1;
+}
+.menu-nav-link {
+    position: relative;
+    display: inline-flex;
+    font-size: 2rem;
+    color: black;
+    text-decoration: none;
+}
+.menu-nav-link span {
+    overflow: 100000px;
+}
+.menu-nav-link span div {
+    transform: translateY(102%);
+}
+.menu-nav-link::after {
+    position: absolute;
+    content: "";
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 3px;
+    background: var(--primary-color);
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform 0.5s;
+}
+.menu-nav-link:hover::after {
+    transform: scaleX(1);
+    transform-origin: left;
+}
+.menu .gallery {
+    margin-top: 60px;
+    text-align: center;
+}
+.menu .title {
+    font-size: 24px;
+    color: white;
+    overflow: hidden;
+}
+.menu .title p {
+    font-size: 12px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    transform: translateY(102%);
+}
+.menu .images {
+    margin-top: 36px;
+    display: flex;
+    flex-wrap: wrap;
+}
+@media screen and (max-width: 860px) {
+    .menu .images {
+        justify-content: center;
+   }
+}
+.menu .images .image-link {
+    padding: 10px;
+    overflow: hidden;
+}
+@media screen and (max-width: 860px) {
+    .menu .images .image-link {
+       width: hidden;
+       height: hidden;
+       padding: 2px;
+       
+   }
+}
+.menu .images .image-link .image {
+    position: relative;
+    transition: 0.6s;
+}
+.menu .images .image-link .image::before {
+    position: absolute;
+    content: attr(data-label);
+    top: 0;
+    left: 0;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    color: white;
+    background: rgb(50, 50, 54);
+    opacity: 0;
+    transition: 0.4s;
+}
+.menu .images .image-link:hover .image {
+    transform: scale(1.2);
+}
+.menu .images .image-link:hover .image::before {
+    opacity: 1;
+}
+.menu .images img {
+    
+    height: 200px;
+    transform: translateY(102%);
 }
