--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -20,7 +20,7 @@
     
     <div class="col-md-3 component-footer">
     <p class="mb-5">Serviços sociais</p> 
-    <p>Alteração nominal</p>  
+    <p>Assistência jurídica</p>  
     <p> Denúncias</p> 
     <p> Ouvidoria</p> 
     </div>
