--- a/src/app/inicio/inicio.component.css
+++ b/src/app/inicio/inicio.component.css
@@ -1,16 +1,46 @@
-.btn{
-    font-size: 30px;
+html{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-ul{
-    list-style: none;
-    margin: 0;
-    padding: 0;
+/* COMEÇAR */
+.comecar{
+    font-size: 16px;
+    background: linear-gradient(225.34deg, rgba(255, 127, 183, 0.61) 0%, rgba(127, 240, 255, 0.61) 101.17%), url('https://i.imgur.com/STDGPeO.jpg');
+    background-size: cover;
+    height: 540px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-ul li a{
-    text-decoration: none; 
+.titulo{
+    margin-top: 15%;
+    font-size: 40px;
+    font-weight: bold;
 }
+
+.descricao{
+    margin-top: 10px;
+    margin-right: 50px;
+    margin-bottom: 24px;
+    font-weight: bold;
+}
+
+.botao{
+    background-color: #4E51BF;
+    border: none;
+    border-radius: 20px;
+    color: white;
+    padding: 15px 80px;
+    margin-right: 15px;
+    font-size: 14px;
+    font-weight: 600;
+}
+
+/* FIM COMEÇAR */
+
 
 div img{
     display: block;
@@ -25,71 +55,29 @@ div img{
     min-width: 320px;
 }
 
-header{
-    background-color: #122a57;
-    height: 100px;
-    display: flex;
-    align-items: center;
-    color: #fff;
+.card-body{
+    align-content: space-between;
 }
 
-header .list-items{
-    display: flex;
-    max-width: 260px;
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
+.btn-light{
+    border-color: black;
+    margin-top: 20px;
+    margin-left: 90px;
 }
 
-.list-items li a{
-    color: #fff;
-}
-
-header .menu{
-    justify-content: space-between;
-}
-
-.apresentacao{
-    height: 100vh;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.apresentacao .texto-apresentacao{
-    min-height: 200px;
-}
-
-.texto-apresentacao{
-    color: #122a57;
-    font-size: 48px;
-    margin-bottom: 10px;
-}
-
-.btn{
-    background-color: #122a57;
-    color: #fff;
+.btn-sm{
+    background-color: #c2c2c2;
+    color: #4E505A;
     text-align: center;
-    border-radius: 30px;
-    width: 220px;
-    display: block;
     text-decoration: none;
-    height: 50px;
-    line-height: 40px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-left: 21px;
+    
 }
 
 .quem-somos {
     flex-direction: row-reverse;
     align-items: center;
     justify-content: space-between;
-}
-
-.quem-somos h2 {
-    font-size: 32px;
-    color: #122a57;
-    display: flex;
-    margin-bottom: 20px;
 }
 
 .quem-somos p{
@@ -171,15 +159,7 @@ header .menu{
     .flex-container{
         flex-direction: column;
     }
-
-    .apresentacao{
-        flex-direction: column-reverse;
-    }
-
-    .apresentacao .texto-apresentacao{
-        width: 100%;
-    }
-
+    
     .quem-somos{
         flex-direction: column-reverse;
     }
@@ -198,64 +178,4 @@ header .menu{
         margin: auto;
     }
 
-    .lista-planos{
-        flex-direction: column;
-        align-items: flex-start;
-        margin-bottom: 20px;
-    }
-
-    .lista-planos .item-plano{
-        max-width: 90%;
-        margin: auto;
-        width: 100%;
-        margin-bottom: 20px;
-    }
 }
-
-
-
-
-
-/* COMEÇAR */
-.comecar{
-    font-size: 16px;
-    background: linear-gradient(225.34deg, rgba(255, 127, 183, 0.61) 0%, rgba(127, 240, 255, 0.61) 101.17%), url('https://i.imgur.com/STDGPeO.jpg');
-    background-size: cover;
-    height: 540px;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-}
-
-
-
-.titulo{
-    margin-top: 15%;
-    font-size: 40px;
-    font-weight: bold;
-}
-
-.descricao{
-    margin-top: 10px;
-    margin-right: 50px;
-    margin-bottom: 24px;
-    font-weight: bold;
-}
-
-.botao{
-    background-color: #4E51BF;
-    border: none;
-    border-radius: 20px;
-    color: white;
-    padding: 15px 80px;
-    margin-right: 15px;
-    font-size: 14px;
-    font-weight: 600;
-}
-/* FIM COMEÇAR */
-
-
-
-
