Adicionando itens ao menu

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -15,17 +15,23 @@
   <div class="menu">
     <div class="menu-inner">
       <ul class="menu-nav">
-        <li class="menu-nav-item"><a class="menu-nav-link"  routerLink='/inicio'><span>
-              <div>Home</div>
+        <li class="menu-nav-item pb-2"><a class="menu-nav-link"  routerLink='/inicio'><span>
+              <div>Sobre</div>
             </span></a></li>
-        <li class="menu-nav-item"><a class="menu-nav-link" routerLink='/eventos'><span>
-              <div>Eventos</div>
+        <li class="menu-nav-item pb-2"><a class="menu-nav-link" routerLink='/eventos'><span>
+              <div>Apoio psicológico</div>
             </span></a></li>
-            <!-- <li class="menu-nav-item"><a class="menu-nav-link" href="#"><span>
-              <div>Contato</div>
-            </span></a></li> -->
-            <li class="menu-nav-item"><a class="menu-nav-link" href="#"><span>
-              <div data-toggle="modal" data-target="#exampleModal">Entrar</div>
+        <li class="menu-nav-item pb-2"><a class="menu-nav-link" href="#"><span>
+              <div>Clínicas especializadas</div>
+            </span></a></li>
+            <li class="menu-nav-item pb-2"><a class="menu-nav-link" href="#"><span>
+              <div>Apoio jurídico</div>
+            </span></a></li>
+            <li class="menu-nav-item pb-2"><a class="menu-nav-link" href="#"><span>
+              <div>Faça parte</div>
+            </span></a></li>
+            <li class="menu-nav-item pb-2"><a class="menu-nav-link" href="#"><span>
+              <div>Blog</div>
             </span></a></li>
       </ul>
       <!-- <div class="gallery">
