--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -34,29 +34,6 @@
         }
 }
 
-@media (max-width : 991px){  
-    
-    .texto{
-        border-radius: 25px;
-        border: 2px solid #ffff ;
-        text-align: center;
-        padding-top: 15px;
-        padding-bottom: 15px;
-    }  
-}
-
-.preto{
-    background-color: black;
-}
-
-.custom-toggler .navbar-toggler-icon {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='white' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
-  }
-
-.custom-toggler.navbar-toggler {
-    border-color: white;
-  } 
-
 #burger-toggle {
     position: absolute;
     appearance: none;
@@ -141,7 +118,6 @@
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: center;
     align-items: center;
     background: white;
     opacity: 0;
@@ -150,27 +126,13 @@
     transition: 0.3s;
 }
 
-
-
-@media screen and (max-width: 860px) {
-    .menu {
-        display: block;
-   }
-}
 .menu-nav {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    list-style-type: none;
+    list-style: none;
+    padding-left: "10px";
+    padding-top: "10px";
+    flex-direction: column;
 }
-@media screen and (max-width: 860px) {
-    .menu-nav {
-        padding-top: "10px";
-        flex-direction: column;
-   }
-}
+
 .menu-nav-item {
     flex: 1;
 }
@@ -198,76 +160,4 @@
     transform: scaleX(0);
     transform-origin: right;
     transition: transform 0.5s;
-}
-.menu-nav-link:hover::after {
-    transform: scaleX(1);
-    transform-origin: left;
-}
-.menu .gallery {
-    margin-top: 60px;
-    text-align: center;
-}
-.menu .title {
-    font-size: 24px;
-    color: white;
-    overflow: hidden;
-}
-.menu .title p {
-    font-size: 12px;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    transform: translateY(102%);
-}
-.menu .images {
-    margin-top: 36px;
-    display: flex;
-    flex-wrap: wrap;
-}
-@media screen and (max-width: 860px) {
-    .menu .images {
-        justify-content: center;
-   }
-}
-.menu .images .image-link {
-    padding: 10px;
-    overflow: hidden;
-}
-@media screen and (max-width: 860px) {
-    .menu .images .image-link {
-       width: hidden;
-       height: hidden;
-       padding: 2px;
-       
-   }
-}
-.menu .images .image-link .image {
-    position: relative;
-    transition: 0.6s;
-}
-.menu .images .image-link .image::before {
-    position: absolute;
-    content: attr(data-label);
-    top: 0;
-    left: 0;
-    z-index: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    color: white;
-    background: rgb(50, 50, 54);
-    opacity: 0;
-    transition: 0.4s;
-}
-.menu .images .image-link:hover .image {
-    transform: scale(1.2);
-}
-.menu .images .image-link:hover .image::before {
-    opacity: 1;
-}
-.menu .images img {
-    
-    height: 200px;
-    transform: translateY(102%);
 }
